# apis/beans/db/types.go
@@ -7,30 +7,6 @@ import (
 	"github.com/google/uuid"
 )
 
-const (
-	_BEAN_COLUMNS_BASE              = "id, url, kind, created, author, image_url, language, categories, sentiments, entities, regions, title, source_id, base_url, domain_name, site_name, cluster_id"
-	_BEAN_COLUMNS_SUMMARY           = "summary"
-	_BEAN_COLUMNS_CONTENT           = "CASE WHEN restricted_content THEN NULL ELSE content END AS content"
-	_BEAN_COLUMNS_TREND             = "likes, comments, mentions, subscribers, related, trend_score"
-	_BEAN_COLUMNS_ALL               = _BEAN_COLUMNS_BASE + ", " + _BEAN_COLUMNS_SUMMARY + ", " + _BEAN_COLUMNS_CONTENT + ", " + _BEAN_COLUMNS_TREND
-	BEAN_COLUMNS_HEADLINES          = _BEAN_COLUMNS_BASE
-	BEAN_COLUMNS_WITHOUT_TREND      = _BEAN_COLUMNS_BASE + ", " + _BEAN_COLUMNS_SUMMARY
-	BEAN_COLUMNS_WITH_TREND         = _BEAN_COLUMNS_BASE + ", " + _BEAN_COLUMNS_SUMMARY + ", " + _BEAN_COLUMNS_TREND
-	BEAN_COLUMNS_MINIMAL            = "id, url, created, title, source_id, base_url, domain_name, site_name, cluster_id"
-	BEAN_COLUMNS_MINIMAL_WITH_TREND = BEAN_COLUMNS_MINIMAL + ", " + _BEAN_COLUMNS_TREND
-)
-
-const (
-	SOURCE_COLUMNS_BASE = "id, base_url, domain_name, site_name"
-	SOURCE_COLUMNS_ALL  = SOURCE_COLUMNS_BASE + ", description, favicon, rss_feed"
-)
-
-const (
-	SORT_RECENT   = "created"
-	SORT_TRENDING = "trend_score"
-	SORT_RELEVANT = "relevance"
-)
-
 type TrendProperties struct {
 	Likes       sql.NullInt64   `db:"likes"`
 	Comments    sql.NullInt64   `db:"comments"`
@@ -68,6 +44,7 @@ type Bean struct {
 	Sentiments []string       `db:"sentiments"`
 	Entities   []string       `db:"entities"`
 	Regions    []string       `db:"regions"`
+	Ideology   sql.NullString `db:"ideology"`
 	Title      sql.NullString `db:"title"`
 	Summary    sql.NullString `db:"summary"`
 	Content    sql.NullString `db:"content"`
@@ -147,6 +124,7 @@ func (s *Cluster) IsZero() bool {
 
 type BeanFilters struct {
 	IDs               []uuid.UUID
+	ExcludeIDs        []uuid.UUID
 	URLs              []string
 	Sources           []uuid.UUID
 	ExcludeSources    []uuid.UUID
