# apis/beans/docs/swagger.json
@@ -2687,6 +2687,10 @@
                     "type": "string",
                     "format": "uuid"
                 },
+                "ideology": {
+                    "description": "Ideology is an experimental political ideology label. It is omitted when unavailable and can misrepresent an Article based on geo-cultural context.",
+                    "type": "string"
+                },
                 "image_url": {
                     "type": "string"
                 },
@@ -2794,6 +2798,10 @@
                 "id": {
                     "type": "string",
                     "format": "uuid"
+                },
+                "ideology": {
+                    "description": "Ideology is an experimental political ideology label. It is omitted when unavailable and can misrepresent an Article based on geo-cultural context.",
+                    "type": "string"
                 },
                 "image_url": {
                     "type": "string"
